--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Developer Tools Menu</title>
+<title>GTSSS Tools Menu</title>
 <style>
   :root{
     --bg:#071025;
@@ -90,3 +90,4 @@
   </div>
 </body>
 </html>
+
