--- a/transactioncount.html
+++ b/transactioncount.html
@@ -26,8 +26,28 @@
       box-shadow:0 8px 30px rgba(2,6,23,.6);
       border:1px solid var(--border);
     }
-    h1{margin:0 0 10px;font-size:20px;color:var(--accent)}
-    p.lead{margin:0 0 16px;color:var(--muted);font-size:13px}
+
+    /* --- HEADER --- */
+    header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 16px;
+      border-bottom: 1px solid var(--border);
+      padding-bottom: 12px;
+    }
+    header h1 {
+      font-size: 22px;
+      color: var(--accent);
+      margin: 0;
+      letter-spacing: 0.5px;
+    }
+    header .tagline {
+      font-size: 13px;
+      color: var(--muted);
+    }
+
+    /* --- FORM ELEMENTS --- */
     label{font-weight:600;color:var(--accent);margin-bottom:4px;display:block;font-size:14px}
     input[type="text"],input[type="datetime-local"]{
       width:100%;
@@ -54,6 +74,8 @@
       box-sizing:border-box;
       white-space:pre-wrap;
     }
+
+    /* --- BUTTONS --- */
     button{
       background:linear-gradient(180deg,#0b1220,#071022);
       border:1px solid var(--border);
@@ -62,10 +84,24 @@
       border-radius:8px;
       cursor:pointer;
       transition:all 0.2s ease;
+      font-size:14px;
     }
     button:hover{background:linear-gradient(180deg,#0d1b33,#0b1a29)}
     button.primary{background:linear-gradient(180deg,#007b8f,#006a7a);font-weight:600}
     button.danger{background:linear-gradient(180deg,#7f1d1d,#991b1b);font-weight:600}
+    button.copy-btn {
+      background:linear-gradient(180deg,#1e293b,#0f172a);
+      border:1px solid var(--border);
+      color:var(--accent);
+      font-weight:600;
+      transition:all 0.2s ease;
+    }
+    button.copy-btn:hover {
+      background:linear-gradient(180deg,#0284c7,#0369a1);
+      color:#fff;
+      transform:translateY(-1px);
+    }
+
     .grid{display:grid;grid-template-columns:1fr 1fr;gap:20px;margin-top:12px}
     .checkbox-group{display:flex;flex-wrap:wrap;gap:10px;margin-top:8px}
     .checkbox-group label{color:var(--text);font-size:13px}
@@ -90,12 +126,74 @@
       font-size:12px;
     }
     .section-title{margin-top:20px;font-size:15px;color:var(--accent);font-weight:600}
+
+    /* --- DATETIME PICKER ICON --- */
+    .grid { display: grid; gap: 1rem; }
+    input[type="datetime-local"] {
+      background-color: #0b1220;
+      color: #e6eef6;
+      border: 1px solid rgba(255,255,255,0.1);
+      border-radius: 8px;
+      padding: 0.6rem 1rem;
+      font-family: Inter, sans-serif;
+      font-size: 0.95rem;
+      outline: none;
+      width: 100%;
+      appearance: none;
+      position: relative;
+    }
+    input[type="datetime-local"]::-webkit-calendar-picker-indicator {
+      opacity: 0;
+      cursor: pointer;
+      position: absolute;
+      right: 1rem;
+    }
+    input[type="datetime-local"]::after {
+      content: "📅";
+      position: absolute;
+      right: 1rem;
+      top: 50%;
+      transform: translateY(-50%);
+      color: #7dd3fc;
+      pointer-events: none;
+      font-size: 1.1rem;
+    }
+    input[type="datetime-local"]:hover::after {
+      color: #38bdf8;
+    }
+
+    /* --- COPY TEXT BOX --- */
+    .container {
+      background: #0b1220;
+      border: 1px solid var(--border);
+      border-radius: 8px;
+      padding: 16px;
+      margin-top: 20px;
+    }
+    .text-box {
+      background: #020617;
+      border: 1px solid var(--border);
+      border-radius: 8px;
+      padding: 12px;
+      font-family: Consolas, monospace;
+      font-size: 0.9rem;
+      color: var(--muted);
+      overflow-x: auto;
+      margin-bottom: 10px;
+    }
+    .copied {
+      color: var(--accent);
+      font-size: 0.9rem;
+      margin-top: 0.3rem;
+    }
   </style>
 </head>
 <body>
   <div class="wrap">
-    <h1>B2BE SQL Query Generator</h1>
-    <p class="lead">Generate SQL queries for document relationships quickly and consistently.</p>
+    <header>
+      <h1>B2BE SQL Query Generator</h1>
+      <div class="tagline">Generate clean SQL queries quickly</div>
+    </header>
 
     <div id="relationships">
       <div class="relationship">
@@ -130,11 +228,20 @@
 
     <div class="row" style="margin-top:20px;gap:10px;">
       <button class="primary" onclick="generateQuery()">Generate Query</button>
-      <button onclick="copyQuery()">Copy to Clipboard</button>
+      <button onclick="copyQuery()">Copy SQL Query</button>
     </div>
 
     <div class="section-title">Generated SQL Query</div>
     <textarea id="output" readonly></textarea>
+
+    <div class="section-title">Header Columns</div>
+    <div class="container">
+      <div id="textToCopy" class="text-box">
+        B2BEDocumentInternalID<br>SenderB2BEUserID<br>ReceiverB2BEUserID<br>B2BEDocumentType<br>PrimaryDocumentID<br>OriginalSize<br>FinalSize<br>B2BEDocumentActionTypeID<br>DateTime
+      </div>
+      <button class="copy-btn" onclick="copyText()">📋 Copy Header Text</button>
+      <div id="message" class="copied"></div>
+    </div>
   </div>
 
   <script>
@@ -144,10 +251,7 @@
       const yyyy=now.getFullYear();
       const mm=pad(now.getMonth()+1);
       const dd=pad(now.getDate());
-      return{
-        start:`${yyyy}-${mm}-${dd}T00:00`,
-        end:`${yyyy}-${mm}-${dd}T23:59`
-      };
+      return{ start:`${yyyy}-${mm}-${dd}T00:00`, end:`${yyyy}-${mm}-${dd}T23:59` };
     }
     window.onload=function(){
       const {start,end}=getTodayRange();
@@ -195,7 +299,7 @@
 SELECT DISTINCT (
   BD.\`B2BEDocumentInternalID\`
 ), BD.\`SenderB2BEUserID\`, BD.\`ReceiverB2BEUserID\`, BD.\`B2BEDocumentType\`, BD.\`PrimaryDocumentID\`,
-BD.\`OriginalSize\`, BD.\`FinalSize\`, BDA.\`B2BEDocumentActionTypeID\`, DATE(BD.\`DateTime\`)
+BD.\`OriginalSize\`, BD.\`FinalSize\`, BDA.\`B2BEDocumentActionTypeID\`, BD.\`DateTime\`
 FROM \`B2BE_DOCUMENT\` AS BD
 INNER JOIN \`B2BE_DOCUMENT_ACTION\` AS BDA 
   ON BD.\`B2BEDocumentInternalID\` = BDA.\`B2BEDocumentInternalID\`
@@ -207,12 +311,26 @@ AND BDA.\`B2BEDocumentActionTypeID\` IN (${actions});`;
       document.getElementById('output').value=query.trim();
     }
 
-    function copyQuery(){
-      const output=document.getElementById('output');
-      output.select();
-      document.execCommand('copy');
-      alert('✅ SQL Query copied to clipboard!');
-    }
+    function copyText() {
+  // Read text content from the div (split by <br>)
+  const lines = Array.from(document.querySelectorAll('#textToCopy br'))
+    .map((br, i) => br.previousSibling?.textContent?.trim())
+    .filter(Boolean);
+
+  // Handle last line if no <br> after it
+  const last = document.querySelector('#textToCopy').lastChild?.textContent?.trim();
+  if (last && !lines.includes(last)) lines.push(last);
+
+  // Join with TABs → Excel columns
+  const tabSeparated = lines.join("\t");
+
+  // Copy to clipboard
+  navigator.clipboard.writeText(tabSeparated).then(() => {
+    const msg = document.getElementById("message");
+    msg.textContent = "✅ Copied horizontally! Paste into Excel to see each header in its own column.";
+    setTimeout(() => msg.textContent = "", 3000);
+  });
+}
   </script>
 </body>
 </html>
