--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>GTSSS Tools Menu</title>
+<title>Developer Tools Menu</title>
 <style>
   :root{
     --bg:#071025;
@@ -85,9 +85,9 @@
       <a class="card" href="./RequirementTemplate.html">Requirement Template</a>
       <a class="card" href="./SpecialCharCode.html">Special Char Code Generator</a>
       <a class="card" href="./TranslationExport.html">Export Dev Template</a>
+      <a class="card" href="./filerestore.html">Restore File Template</a>
     </div>
     <footer>© 2025 Developer Utilities</footer>
   </div>
 </body>
 </html>
-
