--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
       <a class="card" href="./TranslationExport.html">Export Dev Template</a>
       <a class="card" href="./filerestore.html">Restore File Template</a>
       <a class="card" href="./invalidcharchecker.html">Invalid Char Checker</a>
+      <a class="card" href="./BlankdocsV1.html">BlankDocs v1</a>
+
     </div>
     <footer>© 2025 Developer Utilities</footer>
   </div>
