--- a/BlankdocsV1.html
+++ b/BlankdocsV1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>BlankDocs v1 - Secure Download</title>
+<title>BlankDocs v1 - Download</title>
 <style>
 :root{
   --bg:#071025; --panel:#0b1220; --muted:#94a3b8; --accent:#7dd3fc;
@@ -25,19 +25,7 @@ html,body{
 }
 h1{margin:0 0 10px;font-size:20px;color:var(--accent)}
 ol{margin:0 0 16px;padding-left:18px;color:var(--muted);font-size:14px;line-height:1.6}
-input[type="password"]{
-  width:100%;
-  padding:12px;
-  border-radius:8px;
-  border:1px solid var(--border);
-  background:#031022;
-  color:var(--text);
-  font-family:ui-monospace,monospace;
-  font-size:14px;
-  box-sizing:border-box;
-  margin-top:6px;
-}
-button, a.download-link{
+a.download-link{
   display:inline-block;
   width:100%;
   padding:12px;
@@ -54,7 +42,7 @@ button, a.download-link{
   margin-top:10px;
   transition:all .2s ease;
 }
-button:hover, a.download-link:hover{
+a.download-link:hover{
   filter:brightness(1.1);
 }
 .note{
@@ -85,55 +73,9 @@ button:hover, a.download-link:hover{
     <li>Run <b>restore_header.bat</b> to restore the file and check the <b>ChildBackup</b> folder.</li>
   </ol>
 
-  <label for="password"><b>Enter Password:</b></label><br/>
-  <input id="password" type="password" placeholder="Enter password..." />
+  <a href="BlankDocs v1.zip" download class="download-link">⬇️ Download BlankDocs v1.zip</a>
 
-  <button id="checkBtn">Verify Password</button>
-
-  <div id="linkArea"></div>
-
-  <div id="status" class="note">🔒 File is locked. Please enter the correct password.</div>
+  <div class="note">✅ File is ready to download.</div>
 </div>
-
-<script>
-const storedHash = "6e0499b21e6199e2176bcac92f4a6dae7f23e867d13a87d9aec259b579af294f";
-
-async function sha256(message){
-  const enc = new TextEncoder();
-  const data = enc.encode(message);
-  const buf = await crypto.subtle.digest("SHA-256", data);
-  return Array.from(new Uint8Array(buf)).map(b=>b.toString(16).padStart(2,"0")).join("");
-}
-
-document.getElementById("checkBtn").addEventListener("click", async ()=>{
-  const raw = document.getElementById("password").value;
-  const normalized = raw.normalize("NFKC").replace(/\s+/g,"");
-  const hash = await sha256(normalized);
-
-  const status = document.getElementById("status");
-  const linkArea = document.getElementById("linkArea");
-  linkArea.innerHTML = "";
-
-  if(hash === storedHash){
-    status.textContent = "✅ Password verified. Download link created below.";
-    status.style.color = "#7dd3fc";
-
-    const a = document.createElement("a");
-    a.href = "BlankDocs v1.zip";
-    a.download = "BlankDocs v1.zip";
-    a.className = "download-link";
-    a.textContent = "⬇️ Download BlankDocs v1.zip";
-    linkArea.appendChild(a);
-
-    a.addEventListener("click", ()=>{
-      status.textContent = "⬇️ Download started.";
-      setTimeout(()=>{ a.remove(); }, 800);
-    });
-  } else {
-    status.textContent = "❌ Incorrect password. Try again.";
-    status.style.color = "#ff5555";
-  }
-});
-</script>
 </body>
 </html>
