--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@ footer {
     <a class="card" href="./BlankdocsV1.html">BlankDocs v1</a>
     <a class="card" href="./FixField.html">FixField Extract</a>
     <a class="card" href="./JSONValidator.html">JSON Validator</a>
+    <a class="card" href="./Code Checker/CodeChecker.html">Code Checker v1</a>
   </div>
 
   <footer>© 2025 Developer Utilities</footer>
