--- a/Code Checker/CodeChecker.html
+++ b/Code Checker/CodeChecker.html
@@ -81,5 +81,6 @@ button { padding: 6px 12px; border-radius: 6px; border: none; cursor: pointer; f
 <script src="validators/validate_tempdb.js"></script>
 <script src="validators/validate_divzero.js"></script>
 <script src="validators/validate_oldutils.js"></script>
+<script src="validators/validate_deletefile.js"></script>
 </body>
 </html>
