--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@ footer {
     <a class="card" href="./FixField.html">FixField Extract</a>
     <a class="card" href="./JSONValidator.html">JSON Validator</a>
     <a class="card" href="./Code Checker/CodeChecker.html">Code Checker v1</a>
+    <a class="card" href="./SimpleOCR.html">Simple OCR</a>
   </div>
 
   <footer>© 2025 Developer Utilities</footer>
@@ -298,3 +299,4 @@ function filterCards() {
 </script>
 </body>
 </html>
+
